--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,5 +73,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
     implementation 'androidx.multidex:multidex: 2.0.1'
+    implementation 'com.google.android.gms:play-services-basement:17.5.0'
 //    implementation 'com.google.firebase:firebase-analytics'
 }
