--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_messaging: ^11.1.0
   firebase_analytics: ^8.3.4
   firebase_in_app_messaging: ^0.5.0+13
+  flutter_local_notifications: ^9.0.3
 
 dev_dependencies:
   flutter_test:
