--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_analytics: ^8.3.4
   firebase_in_app_messaging: ^0.5.0+13
   flutter_local_notifications: ^9.0.3
+  google_sign_in: ^5.2.1
 
 dev_dependencies:
   flutter_test:
