--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   firebase_in_app_messaging: ^0.5.0+13
   flutter_local_notifications: ^9.0.3
   google_sign_in: ^5.2.1
+  flutter_facebook_auth: ^4.0.0
+  provider: ^6.0.2
+  url_launcher: ^6.0.18
+  permission_handler: ^7.0.0
+  flutter_earth: ^0.0.4
+  model_viewer: ^0.8.1
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - res/3d_model/earth.glb
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
