--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   permission_handler: ^7.0.0
   flutter_earth: ^0.0.4
   model_viewer: ^0.8.1
+  flutter_cube: ^0.1.1
+  matrix_gesture_detector: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +75,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - res/3d_model/earth.glb
+    - res/3d_model/earth.obj
+    - res/3d_model/earth.mtl
+    - res/3d_model/earth.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
