--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   model_viewer: ^0.8.1
   flutter_cube: ^0.1.1
   matrix_gesture_detector: ^0.1.0
+  photo_view: ^0.13.0
 
 dev_dependencies:
   flutter_test:
@@ -78,7 +79,10 @@ flutter:
     - res/3d_model/earth.obj
     - res/3d_model/earth.mtl
     - res/3d_model/earth.png
-
+    - res/3d_model/flutter8.png
+    - res/3d_model/flutter10.png
+    - res/3d_model/lines.png
+    - res/3d_model/flutter.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
