Add total progress

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,11 @@ flutter:
     - res/bihance_pic/icons/profile.svg
     - res/bihance_pic/icons/rating.svg
     - res/bihance_pic/icons/search.svg
+    - res/bihance_pic/ratio_graph.svg
+    - res/bihance_pic/total_progress.svg
+    - res/bihance_pic/green_bullet.svg
+    - res/bihance_pic/red_bullet.svg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
