--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,7 +110,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: SFProDisplay
+      fonts:
+        - asset: res/fonts/sf_pro_display.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
