--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,17 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.10.0
-  firebase_crashlytics: ^2.3.0
-  firebase_messaging: ^11.1.0
-  firebase_analytics: ^8.3.4
-  firebase_in_app_messaging: ^0.5.0+13
-  flutter_local_notifications: ^9.0.3
-  google_sign_in: ^5.2.1
-  flutter_facebook_auth: ^4.0.0
+#  firebase_core: ^1.10.0
+#  firebase_crashlytics: ^2.3.0
+#  firebase_messaging: ^11.1.0
+#  firebase_analytics: ^8.3.4
+#  firebase_in_app_messaging: ^0.5.0+13
+#  flutter_local_notifications: ^9.0.3
+#  google_sign_in: ^5.2.1
+#  flutter_facebook_auth: ^4.0.0
   provider: ^6.0.2
-  url_launcher: ^6.0.18
-  permission_handler: ^7.0.0
+#  url_launcher: ^6.0.18
+#  permission_handler: ^7.0.0
   flutter_earth: ^0.0.4
   model_viewer: ^0.8.1
   matrix_gesture_detector: ^0.1.0
