--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  flutter_bloc: ^8.0.1
+  flutter_services_binding: ^0.1.0
+  google_fonts: ^2.1.0
+  hydrated_bloc: ^8.0.0
+  json_annotation: ^4.4.0
+  path_provider: ^2.0.8
+  weather_repository:
+    path: packages/weather_repository
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +54,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  bloc_test: ^9.0.2
+  build_runner: ^2.0.0
+  json_serializable: ^6.0.0
+  mocktail: ^0.2.0
+  coverage: ^1.0.3
+  test: ^1.16.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
